--- a/index.html
+++ b/index.html
@@ -46,6 +46,58 @@
                 </div>
 
             </li>
+            <li class="pokemon">
+
+                <span class="number">#001</span>
+                <span class="name">Bulbasaur</span>
+
+                <div class="detail">
+
+                    <ol class="types">
+                        <li>grass</li>
+                        <li>poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                        alt="Bulbasaur">
+
+                </div>
+
+            </li>
+            <li class="pokemon">
+
+                <span class="number">#001</span>
+                <span class="name">Bulbasaur</span>
+
+                <div class="detail">
+
+                    <ol class="types">
+                        <li>grass</li>
+                        <li>poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                        alt="Bulbasaur">
+
+                </div>
+
+            </li>
+            <li class="pokemon">
+
+                <span class="number">#001</span>
+                <span class="name">Bulbasaur</span>
+
+                <div class="detail">
+
+                    <ol class="types">
+                        <li>grass</li>
+                        <li>poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+                        alt="Bulbasaur">
+
+                </div>
+
+            </li>
+        
         </ol>
 
     </section>
